--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
    
-    background-image: url("galaxy.jpg");
+    background-image: url("galaxy2.jpg");
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
